# EPOLLMODEL

./: README.md  client.cpp  server.cpp
client/: CMakeLists.txt  main.cpp
client/include/: client.h
client/source/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  main.cpp
server/include/: events.h  handler.h  server.h  tasks.h
server/source/: CMakeLists.txt  events.cpp  handler.cpp  server.cpp  tasks.cpp
